Report reached unrolling bounds in case of UNKNOWN result.